# oneRTCLI

./: LICENSE
compiler/src/: .gitignore
compiler/src/RTCLI.AOTCompiler/: Dispatcher.cs  Program.cs
compiler/src/RTCLI.AOTCompiler.Core/ILConverter/CXX/: CallConvertersCXX.cs  FlowControlConvertersCXX.cs  ILConvertersCXX.cs
runtime/: Directory.Build.Props  Directory.Build.props
runtime/src/: .gitignore  CMakeLists.txt  Directory.Build.Props  Directory.Build.targets
runtime/src/System.Private.CoreLib/: System.Private.CoreLib.csproj  System.Private.CoreLib.sln
runtime/src/System.Private.CoreLib/rtcli/System.Private.CoreLib.Generators/: System.Private.CoreLib.Generators.csproj.nuget.dgspec.json  System.Private.CoreLib.Generators.csproj.nuget.g.props  project.assets.json
runtime/src/cmake/: platform.cmake  vulkan.cmake
runtime/src/gpu/: CMakeLists.txt
runtime/src/gpu/src/common/: cgpu.c
runtime/src/gpu/src/d3d12/: ccgpu_d3d12.cpp  cgpu_d3d12.cpp  cgpu_d3d12_surfaces.cpp  proc_table.c
runtime/src/gpu/src/vulkan/: ccgpu_vulkan.c  ccgpu_vulkan_instance.cpp  cgpu_vulkan.c  cgpu_vulkan_instance.cpp  cgpu_vulkan_surfaces.c  volk_impl.c
runtime/src/gpu/src/webgpu/: cgpu_webgpu_surfaces.c  cgpu_webgpu_surfaces.cpp  cwebgpu.c  cwebgpu.cpp  proc_table.c
runtime/src/include/: sharedlibrary.h
runtime/src/include/cgpu/: api.h  cgpu_config.h  cgpu_instance.h  cgpu_procs.h  gpu.h
runtime/src/include/cgpu/backend/d3d12/: bridge.h  cgpu_d3d12.h  cgpu_d3d12_exts.h  cgpu_d3d12_surfaces.h
runtime/src/include/cgpu/backend/vulkan/: cgpu_vulkan.h  cgpu_vulkan_exts.h  cgpu_vulkan_surfaces.h
runtime/src/include/cgpu/backend/webgpu/: cgpu_exts.h  cgpu_webgpu.h  cgpu_webgpu_exts.h  cgpu_webgpu_surfaces.h  webgpu_bridge.h
runtime/src/include/cgpu/extensions/: cgpu_d3d12_exts.h  cgpu_vulkan_exts.h
runtime/src/include/rtcli/: base-types.h  config.h
runtime/src/include/rtcli/cil/: opcode.h
runtime/src/include/rtcli/detail/: log.h
runtime/src/include/rtcli/icalls/: Console.h
runtime/src/include/rtcli/interop/: kernel32.h
runtime/src/include/rtcli/metadata/: class.h  method.h  module.h  property.h
runtime/src/include/rtcli/vm/: array.h  class.h  field.h  gc.h  interop.h  method.h  object.h  parameter.h  property.h  string.h  type.h  vtable.h
runtime/src/include/rtcli/vm/interpreter/: interpreter.h  mcode.h  meta.h  stack.h  stack.inl
runtime/src/libraries/: Directory.Build.props  Directory.Build.targets
runtime/src/libraries/System.Private.CoreLib/src/System/Threading/: NativeRuntimeEventSource.PortableThreadPool.cs
runtime/src/tests/: CMakeLists.txt
runtime/src/tests/AllocObject/: CMakeLists.txt  main.c
runtime/src/tests/GPU/: CMakeLists.txt
runtime/src/tests/GPU/DeviceInitialize/: CMakeLists.txt  DeviceInitialize.cpp
runtime/src/tests/GPU/Exts/: CMakeLists.txt  D3DDeviceExts.cpp  VkDeviceExts.cpp
runtime/src/tests/GPU/InitRequest/: CMakeLists.txt  DeviceInitialization.cpp  InitRequestTest.cpp  VkDeviceExts.cpp
runtime/src/tests/GPU/InitRequestWebGpu/: CMakeLists.txt  WebGpuInitialize.cpp
runtime/src/tests/GPU/QueueOperations/: CMakeLists.txt  QueueOperations.cpp
runtime/src/tests/GPU/SwapChainCreation/: CMakeLists.txt  SwapChainCreation.cpp
runtime/src/tests/InternalCallTest/: CMakeLists.txt  main.cpp
runtime/src/vm/: CMakeLists.txt
runtime/src/vm/cmake/: platform.cmake
runtime/src/vm/include/rtcli/: PIL.h  base-types.h  config.h  cpp-string.h
runtime/src/vm/include/rtcli/internal/: log.h
runtime/src/vm/include/rtcli/interop/: user32.h
runtime/src/vm/include/rtcli/vm/: gc.h  object.h
runtime/src/vm/platform/windows/interop/: kernel32.c
runtime/src/vm/src/: string.cpp
runtime/src/vm/src/PIL/: PIL.c
runtime/src/vm/src/boehm-gc/: gc_alloc.c
runtime/src/vm/src/icalls/: Console.cpp
runtime/src/vm/src/internal/: log.c
runtime/src/vm/src/no-gc/: gc_alloc.c
runtime/src/vm/src/vm/: class.c  module.cpp
runtime/src/vm/src/vm/interpreter/: il_optimize.c  il_optimizer.c  interpreter.cpp  stack.c
runtime/src/vm/tests/: CMakeLists.txt
runtime/src/vm/tests/AllocObject/: CMakeLists.txt  main.cpp
runtime/src/vm/tests/BaseTypes/: CMakeLists.txt  main.cpp
runtime/src/vm/tests/InternalCallTest/: main.cpp
